[package]
name = "crabcc-compact"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crabcc-compact"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true, features = ["blocking", "json"] }
toml       = { workspace = true }
serde_yml  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
ahash      = { workspace = true }
crabcc-memory = { workspace = true }
similar    = "3"

[dev-dependencies]
tempfile = { workspace = true }
