[package]
name = "crabcc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["compress"]
# `compress` pulls in fsst-rs (Apache-2.0) and gates `pub mod compress;` plus
# the FSST-encoded symbol-store path. Default ON as of v2.0.0-alpha — disable
# at build time with `--no-default-features`, or at runtime with the CLI
# `--compress=false` flag which short-circuits codec loading in `Store::open`.
compress = ["dep:fsst-rs"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ignore = { workspace = true }
grep = { workspace = true }
memchr = { workspace = true }
tantivy = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
notify-debouncer-mini = { workspace = true }
bumpalo = { workspace = true }
fsst-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"

# Wired now so `cargo bench` finds Agent C's harness once `benches/symbols.rs`
# lands (T71). `cargo check --benches` will fail until then — that's expected.
[[bench]]
name = "symbols"
harness = false
