[package]
name = "crabcc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["compress"]
# `bench` gates the criterion bench targets so `cargo build --all-targets`
# in CI doesn't compile them. Run benches locally with
# `cargo bench --features bench`.
bench = []
# `compress` pulls in fsst-rs (Apache-2.0) and gates `pub mod compress;` plus
# the FSST-encoded symbol-store path. Default ON as of v2.0.0-alpha — disable
# at build time with `--no-default-features`, or at runtime with the CLI
# `--compress=false` flag which short-circuits codec loading in `Store::open`.
compress = ["dep:fsst-rs"]
# v2.5.x (#54) — pulls in wooorm/markdown-rs (the `markdown` crate)
# and surfaces `pub mod md;` for CommonMark parsing + drawer-body
# sanitization. Default OFF — markdown processing is opt-in until a
# concrete consumer (memory drawer sanitizer, future `crabcc docs`)
# justifies the dep cost in the default build. Mirrored as the
# `markdown` feature on `crabcc-memory`.
markdown = ["dep:markdown"]
# Issue #109 — gates the BullMQ-backed jobs module (`pub mod jobs`).
# Pulls in tokio + redis. Default OFF; the CLI / MCP / viz surfaces
# stay sync. Enabled by the future apps/jobs-worker integration and
# by the `crabcc jobs ...` subcommand once it lands. Issue #112's
# methodology recommendation: tokio enters the workspace ONLY through
# this feature, never workspace-wide.
jobs = ["dep:tokio", "dep:redis"]
# Issue #161 — gates the testcontainers-rs e2e suite for
# `service_discovery`. Default OFF; spinning up Docker containers on
# every `cargo test` would defeat fast unit-test feedback. Run with
#   cargo test --features testcontainers -p crabcc-core --test service_discovery_e2e
# Requires Docker (or OrbStack on macOS) on the host.
testcontainers = []

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ignore = { workspace = true }
memchr = { workspace = true }
tantivy = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
notify-debouncer-mini = { workspace = true }
bumpalo = { workspace = true }
serde_yml = { workspace = true }
fsst-rs = { workspace = true, optional = true }
markdown = { workspace = true, optional = true }
# Issue #109 — gated by the `jobs` feature. tokio + redis are async by
# nature; everything else in this crate stays sync. The jobs module
# spawns its own runtime when invoked from sync callers (CLI).
tokio = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"
# Issue #161 — testcontainers-rs e2e for service_discovery. Pulled
# in unconditionally as dev-deps; the actual test files are gated by
# `#[cfg(feature = "testcontainers")]` so a default `cargo test`
# doesn't compile or run them.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["redis"] }
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Wired now so `cargo bench` finds Agent C's harness once `benches/symbols.rs`
# lands (T71). Gated behind the `bench` feature so `cargo check --benches`
# doesn't fail (the file doesn't exist yet) and CI's `--all-targets` skips it.
[[bench]]
name = "symbols"
harness = false
required-features = ["bench"]
