[package]
name = "crabcc-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Gates the criterion bench so CI's `--all-targets` doesn't compile it.
# Run locally with `cargo bench -p crabcc-mcp --features bench`.
bench = []
# OpenTelemetry export via OTLP (gRPC). Adds tracing-opentelemetry +
# opentelemetry-otlp. Call `crabcc_mcp::init_otel()` once at startup.
# Zero-cost when disabled — all spans are no-ops without a subscriber.
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tokio", "dep:tracing-subscriber"]

[dependencies]
crabcc-core   = { workspace = true }
crabcc-memory = { workspace = true }
ahash         = { workspace = true }
anyhow        = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
# HTTP transport (#204 phase 1) — sync, no async runtime, same pattern
# crabcc-viz uses for the dashboard. Single-user localhost server.
tiny_http     = { workspace = true }
ureq          = { workspace = true }
rmp-serde     = { workspace = true }
flate2        = { workspace = true }
rusqlite      = { workspace = true }
sonic-rs      = { workspace = true }
# OTel (optional, gated behind `otel` feature)
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry         = { version = "0.27", optional = true, features = ["trace"] }
opentelemetry-otlp    = { version = "0.27", optional = true, features = ["tonic"] }
opentelemetry_sdk     = { version = "0.27", optional = true, features = ["rt-tokio"] }
tokio                 = { version = "1", optional = true, features = ["rt", "macros"] }
tracing-subscriber    = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# Issue #89 — bench/serve_io.rs measures the optimization delta from the
# read_until + from_slice + to_writer rewrite vs the read_line + writeln!
# baseline. Run via `cargo bench -p crabcc-mcp --bench serve_io`.
criterion = "0.8"

[[bench]]
name = "serve_io"
harness = false
required-features = ["bench"]

# Agent->MCP hot-path bench: synthesized claude_code / nullclaw / zeroclaw
# tool-call workloads driven through the real serve_io dispatch loop.
# Run via `cargo bench -p crabcc-mcp --features bench --bench agent_workload`.
[[bench]]
name = "agent_workload"
harness = false
required-features = ["bench"]

[[bench]]
name = "mastodon_transport"
harness = false
required-features = ["bench"]

# End-to-end counterpart to agent_workload: spawns a real `crabcc --mcp`
# child and replays a profile over stdio. Gated behind `bench` so
# `--all-targets` stays clean. Run via
# `cargo run -p crabcc-mcp --features bench --example agent_replay -- --root <repo>`.
[[example]]
name = "agent_replay"
required-features = ["bench"]
