[package]
name = "crabcc-memory-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "crabcc-memory-bench"
path = "src/main.rs"

[dependencies]
crabcc-memory = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
