[package]
name = "crabcc-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["compress"]
# `compress` enables FSST encoding of `drawers.body` via the Codec exposed by
# crabcc-core. Default ON to match the policy set for symbol-store compression
# in crabcc-core. Disable with `--no-default-features` (no fsst-rs in the dep
# graph) or at runtime by opening the backend without a sibling fsst.symbols
# file present.
compress = ["crabcc-core/compress"]
# v2.5.1 (#17) — load the bundled sqlite-vec C extension at Backend::open
# and create a `drawers_vec` virtual table for ANN search. Default OFF —
# pulls in the sqlite-vec FFI dep + ~few hundred KB of compiled extension.
# #20 wires the actual search path; until then the table stays empty.
memory-vec = ["dep:sqlite-vec"]
# v2.5.x (#40) — std::simd-backed cosine helper. Default OFF because
# `portable_simd` (rust-lang/rust#86656) is still nightly-only. Enable
# when building with a nightly toolchain to get ~5–8x speed-up on the
# 384-d brute-force cosine path used by InMemoryBackend::query and
# SqliteBackend::query.
simd-cosine = []

[dependencies]
# Reuse: hash::sha256_hex, store pragma pattern, walker/watch/fts in later phases.
# `compress` is forwarded so the same Codec used for symbol signatures handles
# drawer bodies — no second symbol table to maintain.
crabcc-core = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
# Optional — only built when the `memory-vec` feature is on. Bundles the
# sqlite-vec C extension; we register it via sqlite3_auto_extension so every
# rusqlite Connection inherits it.
sqlite-vec = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

# `cache_bench` example uses tempfile + serde_json at the binary level
# (not just inside #[cfg(test)]). dev-dependencies cover both, and
# examples build under the dev profile, so no extra wiring needed.
[[example]]
name = "cache_bench"
required-features = []
