[package]
name = "crabcc-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["compress", "memory-vec"]
# `compress` enables FSST encoding of `drawers.body` via the Codec exposed by
# crabcc-core. Default ON to match the policy set for symbol-store compression
# in crabcc-core. Disable with `--no-default-features` (no fsst-rs in the dep
# graph) or at runtime by opening the backend without a sibling fsst.symbols
# file present.
compress = ["crabcc-core/compress"]
# v2.5.1 (#17) / #20 — load the bundled sqlite-vec C extension at
# Backend::open, create + backfill `drawers_vec`, and route vector queries
# through it instead of the brute-force cosine scan. Default ON (same as
# the crate default). Disable with `--no-default-features` if you want a
# pure-Rust build without the sqlite-vec C extension.
memory-vec = ["dep:sqlite-vec"]
# v2.5.x (#40) — std::simd-backed cosine helper. Default OFF because
# `portable_simd` (rust-lang/rust#86656) is still nightly-only. Enable
# when building with a nightly toolchain to get ~5–8x speed-up on the
# 384-d brute-force cosine path used by InMemoryBackend::query and
# SqliteBackend::query.
simd-cosine = []
# v2.5.2 (#18) — real MiniLM-L6-v2 384-dim embeddings via fastembed-rs.
# Default OFF — pulls in ~25 MB of ONNX model file (lazy-downloaded into
# ~/.crabcc/models on first use) plus the ort runtime. With this feature
# off the workspace ships zero ML deps and HashEmbedder remains the only
# Embedder impl.
memory-embed = ["dep:fastembed"]
# v2.5.x (#54) — drawer-body sanitization via wooorm/markdown-rs.
# When enabled, `Palace::remember_in_session` strips markdown syntax
# (code fences, heading markers, list bullets) from `body` before
# storage, so BM25/FTS5 ranks on content tokens — not on ` ``` ` /
# `###` artefacts. Default OFF until measured against the recall@5
# golden test from #20. Requires `crabcc-core/markdown`.
markdown = ["crabcc-core/markdown"]

[dependencies]
# Reuse: hash::sha256_hex, store pragma pattern, walker/watch/fts in later phases.
# `compress` is forwarded so the same Codec used for symbol signatures handles
# drawer bodies — no second symbol table to maintain.
crabcc-core = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
# Myers line-diff for `read` diff-on-re-read: when an agent re-reads a file
# it just edited, serve a unified diff vs the last-seen version instead of the
# whole file. Pure-Rust, no build script (offline-safe).
similar = "3"
# Optional — only built when the `memory-vec` feature is on. Bundles the
# sqlite-vec C extension; we register it via sqlite3_auto_extension so every
# rusqlite Connection inherits it.
sqlite-vec = { workspace = true, optional = true }
# Optional — only built when the `memory-embed` feature is on. Wraps an ONNX
# Runtime session over MiniLM-L6-v2; the model file (~25 MB) is downloaded
# on first use into the platform cache dir and reused thereafter.
fastembed = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

# `cache_bench` example uses tempfile + serde_json at the binary level
# (not just inside #[cfg(test)]). dev-dependencies cover both, and
# examples build under the dev profile, so no extra wiring needed.
[[example]]
name = "cache_bench"
required-features = []
