[package]
name = "crabcc-viz"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
crabcc-core = { workspace = true }

anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sonic-rs    = { workspace = true }
tracing     = { workspace = true }
tiny_http   = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }
