[package]
name = "crabcc-viz"
# Standalone — excluded from the workspace (see root Cargo.toml comment) so
# `version.workspace = true` would fail to find its workspace.package source.
# Catches up to v4 (symbol-id-keyed CallGraph) in v4.0.1; tracked in #551.
version      = "4.1.0"
edition      = "2021"
rust-version = "1.86"
license      = "MIT"
repository   = "https://github.com/peterlodri-sec/crabcc"

[dependencies]
# crabcc-viz is excluded from the workspace (see root Cargo.toml comment),
# so `workspace = true` inheritance can't be used here. Versions track
# the workspace's [workspace.dependencies] table; keep in sync until viz
# catches up to the v4 graph API in v4.0.1 and rejoins the workspace.
crabcc-core   = { path = "../crabcc-core" }
crabcc-memory = { path = "../crabcc-memory" }
# `crabcc-fetch` brings the async URL fetcher + html→md cleaner the
# `/api/memory/ingest` endpoint pipes drawers through.
crabcc-fetch  = { path = "../crabcc-fetch" }

anyhow      = "1"
rusqlite    = { version = "0.39", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sonic-rs    = "0.5"
tracing     = "0.1"
tiny_http   = "0.12"
# Single-thread runtime spun up per ingest request — tiny_http itself
# is sync, but the fetch path (`crabcc-fetch::fetch_and_clean`) is async.
tokio       = { version = "1", features = ["rt", "macros"] }
# Blocking HTTP client for GitHub/Gitea API calls (forge routes). Uses
# native-tls so no extra OpenSSL setup is needed on the user's machine.
ureq        = { version = "2", features = ["native-tls", "json"] }

[dev-dependencies]
tempfile   = "3"
serde_json = "1"
