[package]
name = "ucracc-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

# A navigation + retrieval LSP server backed by crabcc-core's symbol DB.
# Coexists with rust-analyzer (and other semantic LSPs) — does NOT do
# diagnostics, completion, or refactor. Optimised for cold-start < 100 ms
# and hover/definition/references < 20 ms p95.

[features]
default = ["swift"]
# Pulls tree-sitter-swift. Default ON because crabcc-core's grammar fleet
# does not cover Swift and the user explicitly wants Swift support.
swift = ["dep:tree-sitter-swift"]
# Enables the workspace/executeCommand `ucracc.memory.search` command.
memory = ["dep:crabcc-memory"]
# Enables `ucracc.webfetch`.
fetch = ["dep:crabcc-fetch", "dep:reqwest"]
# Enables `ucracc.rerank` and auto-rerank inside memory.search.
# Pulls fastembed and lazy-downloads bge-reranker-v2-m3 (~1.1 GB) on first use.
rerank = ["dep:fastembed"]

[dependencies]
crabcc-core = { workspace = true }
crabcc-memory = { workspace = true, optional = true }
crabcc-fetch = { path = "../crabcc-fetch", optional = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tower-lsp = "0.20"

tree-sitter = { workspace = true }
tree-sitter-swift = { version = "0.7", optional = true }
moka = { workspace = true }

reqwest = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[lib]
name = "ucracc_lsp"
path = "src/lib.rs"

[[bin]]
name = "ucracc-lsp"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync", "io-std", "time"] }
serde_json = { workspace = true }

[[bench]]
name = "baseline_vs_lsp"
harness = false

